--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
-# baseurl: "/particle" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+title: Malek Atwiz - Personal blog
+description: Personal technical blog for Malek Atwiz, a software developer works with .NET technologies
 
 # User settings
 username: Malek Atwiz
@@ -13,7 +11,7 @@ github_username:  malekatwiz
 
 # Google-analytics
 google-analytics:
-  id: ""
+  id: "UA-69684210-2"
 
 exclude: ['package.json', 'src' , 'node_modules']
 
